fix: auto scroll top

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h3>But du jeu</h3>
         <p>Le mytho doit débattre sans se faire cramer, les autres doivent penser qu'il connait le débat. Il peut gagner
             1 point en plus si il réussit a devinner le débat à la fin des 3 tours.</p>
-        <p>Les joueurs doivent trouver le Mytho. Si il est demasqué, chaque joueur remporte 1 point. Si il ne l'ai pas,
+        <p>Les joueurs doivent trouver le Mytho. Si il est demasqué, chaque joueur remporte 1 point. S'il ne l'est pas,
             il gagne 1 point.</p>
 
         <div class="bottomAction">
